; ModuleID = '/home/carl/AnghaBench/git/extr_json-writer.c_jw_object_inline_begin_object.c'
source_filename = "/home/carl/AnghaBench/git/extr_json-writer.c_jw_object_inline_begin_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_writer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jw_object_inline_begin_object(%struct.json_writer* %0, i8* %1) #0 {
  %3 = alloca %struct.json_writer*, align 8
  %4 = alloca i8*, align 8
  store %struct.json_writer* %0, %struct.json_writer** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.json_writer*, %struct.json_writer** %3, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @object_common(%struct.json_writer* %5, i8* %6)
  %8 = load %struct.json_writer*, %struct.json_writer** %3, align 8
  %9 = load %struct.json_writer*, %struct.json_writer** %3, align 8
  %10 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @jw_object_begin(%struct.json_writer* %8, i32 %11)
  ret void
}

declare dso_local i32 @object_common(%struct.json_writer*, i8*) #1

declare dso_local i32 @jw_object_begin(%struct.json_writer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
